// proto/financial.proto
syntax = "proto3";

package financial;
option go_package = "tigerbeetle-service/proto";

// Serviço principal para gerenciamento financeiro
service FinancialService {
  // Operações de conta
  rpc CreateAccount(CreateAccountRequest) returns (AccountResponse);
  rpc GetAccount(GetAccountRequest) returns (AccountResponse);
  
  // Operações de transação
  rpc CreateTransfer(CreateTransferRequest) returns (TransferResponse);
  rpc GetTransfer(GetTransferRequest) returns (TransferResponse);
}

// Requisição para criar uma conta
message CreateAccountRequest {
  uint32 code = 1;
  uint32 ledger = 2;
  uint32 flags = 3;
  string user_data = 4;
}

// Requisição para buscar uma conta
message GetAccountRequest {
  string id = 1;
}

// Resposta de uma operação com conta
message AccountResponse {
  string id = 1;
  uint32 code = 2;
  uint32 ledger = 3;
  int64 balance = 4;
  uint32 flags = 5;
  string user_data = 6;
  bool success = 7;
  string error_message = 8;
}

// Requisição para criar uma transferência
message CreateTransferRequest {
  string debit_account_id = 1;
  string credit_account_id = 2;
  uint64 amount = 3;
  uint32 ledger = 4;
  string code = 5;
  uint32 flags = 6;
}

// Requisição para buscar uma transferência
message GetTransferRequest {
  string id = 1;
}

// Resposta de uma operação com transferência
message TransferResponse {
  string id = 1;
  string debit_account_id = 2;
  string credit_account_id = 3;
  uint64 amount = 4;
  uint32 ledger = 5;
  string code = 6;
  uint32 flags = 7;
  uint32 timestamp = 8;
  bool success = 9;
  string error_message = 10;
}